src/main/css/components/form.css
legend {
  @apply dark:tw-text-zinc-200;
  @apply dark:tw-font-normal;
}

.tw-form-control,
.details-dropdown_summary {
  @apply tw-outline-0;
  @apply tw-block;
  @apply tw-text-sm;
  @apply tw-w-full;
  @apply tw-py-1;
  @apply tw-px-2.5;
  @apply tw-border;
  @apply tw-border-neutral-300;
}

.form-control,
.tw-form-control,
.details-dropdown_summary {
  /* ring-0 is required to enable transition to ring-x of the focused form-control */
  @apply tw-ring-0;
  @apply tw-transition;
  @apply tw-duration-150;
  @apply tw-ease-in-out;
  @apply tw-rounded-md;
  @apply dark:tw-border-neutral-600 !important;
}

.details-dropdown {
  position: relative;
}

.details-dropdown_summary {
  @apply tw-px-3;
  @apply tw-py-2;
  @apply tw-rounded-md;
  @apply tw-cursor-pointer;
}

.details-dropdown_content {
  z-index: 1;
  position: absolute;
  left: 0;
  right: 0;
  @apply -tw-bottom-1;
  @apply tw-translate-y-full;
  @apply tw-bg-white;
  @apply tw-shadow-lg;
  @apply dark:tw-shadow-none;
  @apply dark:tw-bg-zinc-900;
  @apply tw-border;
  @apply dark:tw-border-zinc-500;
  @apply tw-px-4;
  @apply tw-py-3;
  @apply tw-rounded;
}

input[disabled],
.form-control[disabled],
.tw-form-control[disabled],
fieldset[disabled] input,
fieldset[disabled] .form-control,
fieldset[disabled] .tw-form-control {
  @apply dark:tw-text-neutral-700 !important;
  @apply dark:tw-bg-neutral-800 !important;
  @apply tw-border-0 !important;
}

.form-control:focus,
.duet-date__input:focus,
.duet-date__toggle:focus {
  /* reset bootstrap stuff */
  border-color: inherit !important;
  box-shadow: none;
}

.form-control:focus,
.tw-form-control:focus,
.details-dropdown_summary:focus,
.duet-date__input:focus,
.duet-date__toggle:focus {
  @apply tw-ring-2 !important;
  @apply tw-ring-blue-300 !important;
}

.input-group {
  @apply tw-rounded-md !important;
  @apply tw-border;
  @apply tw-transition;
  border-color: #ccc;
  @apply dark:tw-border-neutral-600;
}

.input-group.has-error {
  @apply tw-border-red-700;
}

.input-group .form-control {
  /* remove border of form-control since the input-group defines it */
  @apply tw-border-0 !important;
  /* no right rounded corners since there is an input-group-addon attached to the right */
  @apply tw-rounded-r-none !important;
}

.input-group-addon {
  @apply dark:tw-bg-zinc-800;
  @apply dark:tw-text-zinc-200;
}

.input-group .input-group-addon {
  /* remove border of input-group-addon since the input-group defines it */
  @apply tw-border-0 !important;
  /* however, left border should still be visible */
  @apply tw-border-l-2 !important;
  border-color: #ccc;
  @apply dark:tw-border-neutral-600;
}

.input-group:focus-within {
  @apply tw-ring-2;
  @apply tw-ring-blue-300;
  @apply tw-border-transparent;
}

.input-group .form-control:focus {
  /* reset ring since input-group defines it already */
  @apply tw-ring-0 !important;
  @apply tw-border-transparent;
}

/**************************************************************************

  REQUIRED FORM FIELDS

**************************************************************************/

label.is-required:after,
.form-group.is-required > label:after {
  content: "*";
}

/**************************************************************************

  HORIZONTAL FORM

**************************************************************************/

.form-horizontal .control-label {
  text-align: left;
}

.form-horizontal .halves {
  width: 45%;
}

.form-horizontal .thirds {
  width: 30%;
}

/**************************************************************************

  FORM VALIDATION ERRORS

**************************************************************************/

.error {
  @apply tw-text-red-800;
}

input.error,
textarea.error {
  @apply tw-border-red-700;
}

.info {
  color: #3a87ad;
}

/**************************************************************************

  SINGLE COLUMN FORM

**************************************************************************/

.form-section .help-block {
  margin-top: 0;
  @apply dark:tw-text-zinc-200;
  @apply dark:tw-text-opacity-75;
}

/**************************************************************************

  DEPARTMENT FORM

**************************************************************************/

.department--members {
  border: 1px solid #ddd;
  border-radius: 4px;
  overflow: auto;
  height: 400px;
  width: 100%;
  @apply dark:tw-border-zinc-600;
}

.department--member {
  border-bottom: 1px solid #ddd;
  display: table;
  width: 100%;
  @apply dark:tw-border-zinc-600;
}

.department--member.is-assigned {
  background-color: #e8efd1;
  @apply dark:tw-bg-zinc-800;
}

.department--member.is-inactive {
  background-color: #fff4ea;
  @apply dark:tw-bg-transparent;
}

.department--member:last-child {
  border-bottom: none;
}

.department--member-image,
.department--member-assignment {
  padding: 12px;
  display: table-cell;
  vertical-align: middle;
}

.department--member-image {
  width: 1px;
  padding-left: 24px;
}

.department--member-info {
  margin: 0;
}

.department--member-assignment > .checkbox > label {
  display: block;
}

.department--member-assignment > .checkbox > label > input[type="checkbox"] {
  margin-top: 2px;
}

/**************************************************************************

  SEARCH FIELD

**************************************************************************/

.search-field {
  margin-bottom: 21px;
}

.select-caret {
  @apply tw-text-zinc-700;
}

input,
select,
textarea,
.details-dropdown_summary {
  @apply dark:tw-border-zinc-600 !important;
  @apply dark:tw-bg-zinc-700 !important;
  @apply dark:tw-text-zinc-50 !important;
}

.select-caret {
  @apply dark:tw-text-zinc-50;
}

